--- a/src/main/resources/templates/common/generator/add.html.vm
+++ b/src/main/resources/templates/common/generator/add.html.vm
@@ -14,7 +14,7 @@
 <div class="form-group">	
 								<label class="col-sm-3 control-label">${column.comments}：</label>
 								<div class="col-sm-8">
-									<input id="${column.attrname}" name="${column.attrname}" class="form-control" type="text">
+									<input id="${column.attributeName}" name="${column.attributeName}" class="form-control" type="text">
 								</div>
 							</div>
 							#end
