--- a/src/main/resources/templates/common/generator/domain.java.vm
+++ b/src/main/resources/templates/common/generator/domain.java.vm
@@ -1,5 +1,7 @@
 package ${package}.domain;
 
+import lombok.Data;
+
 import java.io.Serializable;
 import java.util.Date;
 
@@ -7,34 +9,19 @@ import java.util.Date;
 import java.math.BigDecimal;
 #end
 
-
 /**
  * ${comments}
- * 
+ *
  * @author ${author}
  * @email ${email}
  * @date ${datetime}
  */
+@Data
 public class ${className}DO implements Serializable {
-	private static final long serialVersionUID = 1L;
-	
-#foreach ($column in $columns)
-	//$column.comments
-	private $column.attrType $column.attrname;
-#end
+    private static final long serialVersionUID = 1L;
 
 #foreach ($column in $columns)
-	/**
-	 * 设置：${column.comments}
-	 */
-	public void set${column.attrName}($column.attrType $column.attrname) {
-		this.$column.attrname = $column.attrname;
-	}
-	/**
-	 * 获取：${column.comments}
-	 */
-	public $column.attrType get${column.attrName}() {
-		return $column.attrname;
-	}
+    // $column.comments
+    private $column.attributeType $column.attributeName;
 #end
 }
