--- a/src/main/resources/templates/common/generator/edit.html.vm
+++ b/src/main/resources/templates/common/generator/edit.html.vm
@@ -9,13 +9,13 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-						<input id="${pk.columnName}" name="${pk.columnName}" th:value="${${classname}.${pk.columnName}}"  type="hidden">
+						<input id="${pk.attributeName}" name="${pk.attributeName}" th:value="${${classname}.${pk.attributeName}}"  type="hidden">
 #foreach($column in $columns)
 #if($column.columnName != $pk.columnName)
 <div class="form-group">	
 								<label class="col-sm-3 control-label">${column.comments}：</label>
 								<div class="col-sm-8">
-									<input id="${column.attrname}" name="${column.attrname}" th:value="${${classname}.${column.attrname}}" class="form-control" type="text">
+									<input id="${column.attributeName}" name="${column.attributeName}" th:value="${${classname}.${column.attributeName}}" class="form-control" type="text">
 								</div>
 							</div>
 							#end
