--- a/src/main/resources/templates/common/generator/list.js.vm
+++ b/src/main/resources/templates/common/generator/list.js.vm
@@ -49,7 +49,7 @@ function load() {
 								},
 								#foreach($column in $columns)
 								{
-									field : '${column.attrname}', 
+									field : '${column.attributeName}',
 									title : '${column.comments}' 
 								},
 								#end
@@ -59,13 +59,13 @@ function load() {
 									align : 'center',
 									formatter : function(value, row, index) {
 										var e = '<a class="btn btn-primary btn-sm '+s_edit_h+'" href="#" mce_href="#" title="编辑" onclick="edit(\''
-												+ row.${pk.attrname}
+												+ row.${pk.attributeName}
 												+ '\')"><i class="fa fa-edit"></i></a> ';
 										var d = '<a class="btn btn-warning btn-sm '+s_remove_h+'" href="#" title="删除"  mce_href="#" onclick="remove(\''
-												+ row.${pk.attrname}
+												+ row.${pk.attributeName}
 												+ '\')"><i class="fa fa-remove"></i></a> ';
 										var f = '<a class="btn btn-success btn-sm" href="#" title="备用"  mce_href="#" onclick="resetPwd(\''
-												+ row.${pk.attrname}
+												+ row.${pk.attributeName}
 												+ '\')"><i class="fa fa-key"></i></a> ';
 										return e + d ;
 									}
@@ -103,7 +103,7 @@ function remove(id) {
 			url : prefix+"/remove",
 			type : "post",
 			data : {
-				'${pk.attrname}' : id
+				'${pk.attributeName}' : id
 			},
 			success : function(r) {
 				if (r.code==0) {
@@ -132,7 +132,7 @@ function batchRemove() {
 		var ids = new Array();
 		// 遍历所有选择的行数据，取每条数据对应的ID
 		$.each(rows, function(i, row) {
-			ids[i] = row['${pk.attrname}'];
+			ids[i] = row['${pk.attributeName}'];
 		});
 		$.ajax({
 			type : 'POST',
