--- a/src/main/resources/templates/common/generator/ServiceImpl.java.vm
+++ b/src/main/resources/templates/common/generator/ServiceImpl.java.vm
@@ -1,4 +1,6 @@
-package ${package}.service.impl;
+package
+
+    ${package}.service.impl;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -11,45 +13,44 @@ import ${package}.domain.${className}DO;
 import ${package}.service.${className}Service;
 
 
-
 @Service
 public class ${className}ServiceImpl implements ${className}Service {
-	@Autowired
-	private ${className}Dao ${classname}Dao;
-	
-	@Override
-	public ${className}DO get(${pk.attributeType} ${pk.attributeName}){
-		return ${classname}Dao.get(${pk.attributeName});
-	}
-	
-	@Override
-	public List<${className}DO> list(Map<String, Object> map){
-		return ${classname}Dao.list(map);
-	}
-	
-	@Override
-	public int count(Map<String, Object> map){
-		return ${classname}Dao.count(map);
-	}
-	
-	@Override
-	public int save(${className}DO ${classname}){
-		return ${classname}Dao.save(${classname});
-	}
-	
-	@Override
-	public int update(${className}DO ${classname}){
-		return ${classname}Dao.update(${classname});
-	}
-	
-	@Override
-	public int remove(${pk.attributeType} ${pk.attributeName}){
-		return ${classname}Dao.remove(${pk.attributeName});
-	}
-	
-	@Override
-	public int batchRemove(${pk.attributeType}[] ${pk.attributeName}s){
-		return ${classname}Dao.batchRemove(${pk.attributeName}s);
-	}
-	
+    @Autowired
+    private ${className}Dao ${classname}Dao;
+
+    @Override
+    public ${className}DO get(${pk.attributeType} ${pk.attributeName}) {
+        return ${classname}Dao.get(${pk.attributeName});
+    }
+
+    @Override
+    public List<${className}DO> list(Map<String, Object> map) {
+        return ${classname}Dao.list(map);
+    }
+
+    @Override
+    public int count(Map<String, Object> map) {
+        return ${classname}Dao.count(map);
+    }
+
+    @Override
+    public int save(${className}DO ${classname}) {
+        return ${classname}Dao.save(${classname});
+    }
+
+    @Override
+    public int update(${className}DO ${classname}) {
+        return ${classname}Dao.update(${classname});
+    }
+
+    @Override
+    public int remove(${pk.attributeType} ${pk.attributeName}) {
+        return ${classname}Dao.remove(${pk.attributeName});
+    }
+
+    @Override
+    public int batchRemove(${pk.attributeType}[]${pk.attributeName}s) {
+        return ${classname}Dao.batchRemove(${pk.attributeName}s);
+    }
+
 }
