--- a/src/main/resources/templates/common/generator/Mapper.xml.vm
+++ b/src/main/resources/templates/common/generator/Mapper.xml.vm
@@ -3,81 +3,88 @@
 
 <mapper namespace="${package}.dao.${className}Dao">
 
-	<select id="get" resultType="${package}.domain.${className}DO">
+    <select id="get" resultType="${package}.domain.${className}DO">
 		select #foreach($column in $columns)`$column.columnName`#if($velocityCount != $columns.size()),#end#end from ${tableName} where ${pk.columnName} = #{value}
 	</select>
 
-	<select id="list" resultType="${package}.domain.${className}DO">
-		select #foreach($column in $columns)`$column.columnName`#if($velocityCount != $columns.size()),#end#end from ${tableName}
-        <where>  
-		  #foreach($column in $columns)
-		  <if test="$column.attributeName != null and $column.attributeName.trim() != ''"> and $column.columnName = #{$column.attributeName} </if>
-		  #end
-		</where>
+    <select id="list" resultType="${package}.domain.${className}DO">
+        select #foreach($column in $columns)`$column.columnName`#if($velocityCount != $columns.size()),#end#end
+        from ${tableName}
+        <where>
+            #foreach($column in $columns)
+                <if test="$column.attributeName != null and $column.attributeName.trim() != ''">and $column.columnName =
+                    #{$column.attributeName}
+                </if>
+            #end
+        </where>
         <choose>
             <when test="sort != null and sort.trim() != ''">
                 order by ${sort} ${order}
             </when>
-			<otherwise>
+            <otherwise>
                 order by ${pk.columnName} desc
-			</otherwise>
+            </otherwise>
         </choose>
-		<if test="offset != null and limit != null">
-			limit #{offset}, #{limit}
-		</if>
-	</select>
-	
- 	<select id="count" resultType="int">
-		select count(*) from ${tableName}
-		 <where>  
-		  #foreach($column in $columns)
-		  <if test="$column.attributeName != null and $column.attributeName.trim() != ''"> and $column.columnName = #{$column.attributeName} </if>
-		  #end
-		</where>
-	</select>
-	 
-	<insert id="save" parameterType="${package}.domain.${className}DO"#if($pk.extra == 'auto_increment') useGeneratedKeys="true" keyProperty="$pk.attributeName"#end>
+        <if test="offset != null and limit != null">
+            limit #{offset}, #{limit}
+        </if>
+    </select>
+
+    <select id="count" resultType="int">
+        select count(*) from ${tableName}
+        <where>
+            #foreach($column in $columns)
+                <if test="$column.attributeName != null and $column.attributeName.trim() != ''">and $column.columnName =
+                    #{$column.attributeName}
+                </if>
+            #end
+        </where>
+    </select>
+
+    <insert id="save" parameterType="${package}.domain.${className}DO"#if($pk.extra == 'auto_increment')
+            useGeneratedKeys="true" keyProperty="$pk.attributeName"#end>
 		insert into ${tableName}
 		(
 #foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+        #if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
 			`$column.columnName`#if($velocityCount != $columns.size()), #end
 
-#end			
-#end
+        #end
+    #end
 		)
 		values
 		(
 #foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+        #if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
 			#{$column.attributeName}#if($velocityCount != $columns.size()), #end
 
-#end			
-#end
+        #end
+    #end
 		)
 	</insert>
-	 
-	<update id="update" parameterType="${package}.domain.${className}DO">
-		update ${tableName} 
-		<set>
-#foreach($column in $columns)
-#if($column.columnName != $pk.columnName)
-			<if test="$column.attributeName != null">`$column.columnName` = #{$column.attributeName}#if($velocityCount != $columns.size()), #end</if>
-#end
-#end
-		</set>
-		where ${pk.columnName} = #{${pk.attributeName}}
-	</update>
-	
-	<delete id="remove">
+
+    <update id="update" parameterType="${package}.domain.${className}DO">
+        update ${tableName}
+        <set>
+            #foreach($column in $columns)
+                #if($column.columnName != $pk.columnName)
+                    <if test="$column.attributeName != null">`$column.columnName` = #{$column.attributeName
+                        }#if($velocityCount != $columns.size()), #end</if>
+                #end
+            #end
+        </set>
+        where ${pk.columnName} = #{${pk.attributeName}}
+    </update>
+
+    <delete id="remove">
 		delete from ${tableName} where ${pk.columnName} = #{value}
 	</delete>
-	
-	<delete id="batchRemove">
-		delete from ${tableName} where ${pk.columnName} in 
-		<foreach item="${pk.attributeName}" collection="array" open="(" separator="," close=")">
-			#{${pk.attributeName}}
-		</foreach>
-	</delete>
+
+    <delete id="batchRemove">
+        delete from ${tableName} where ${pk.columnName} in
+        <foreach item="${pk.attributeName}" collection="array" open="(" separator="," close=")">
+            #{${pk.attributeName}}
+        </foreach>
+    </delete>
 
 </mapper>
