--- a/src/main/resources/templates/common/generator/ServiceImpl.java.vm
+++ b/src/main/resources/templates/common/generator/ServiceImpl.java.vm
@@ -1,6 +1,4 @@
-package
-
-    ${package}.service.impl;
+package ${package}.service.impl;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
