--- a/src/main/resources/templates/common/generator/ServiceImpl.java.vm
+++ b/src/main/resources/templates/common/generator/ServiceImpl.java.vm
@@ -10,6 +10,13 @@ import ${package}.dao.${className}Dao;
 import ${package}.domain.${className}DO;
 import ${package}.service.${className}Service;
 
+/**
+ * ${comments}
+ *
+ * @author ${author}
+ * @email ${email}
+ * @date ${datetime}
+ */
 
 @Service
 public class ${className}ServiceImpl implements ${className}Service {
@@ -50,5 +57,4 @@ public class ${className}ServiceImpl implements ${className}Service {
     public int batchRemove(${pk.attributeType}[]${pk.attributeName}s) {
         return ${classname}Dao.batchRemove(${pk.attributeName}s);
     }
-
 }
