--- a/src/main/resources/templates/common/generator/list.js.vm
+++ b/src/main/resources/templates/common/generator/list.js.vm
@@ -8,7 +8,7 @@ function load() {
     $('#exampleTable')
         .bootstrapTable(
             {
-                method: 'get', // 服务器数据的请求方式 get or post
+                method: 'GET', // 服务器数据的请求方式 get or post
                 url: prefix + "/list", // 服务器数据的加载地址
                 //	showRefresh : true,
                 //	showToggle : true,
