--- a/src/main/resources/templates/system/menu/add.html
+++ b/src/main/resources/templates/system/menu/add.html
@@ -9,11 +9,33 @@
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
                             <form class="form-horizontal m-t" id="signupForm">
+                                <input id="parentId" name="parentId" type="hidden"
+                                       th:value="${pId}">
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">父编号：</label>
+                                    <label class="col-sm-3 control-label">上级菜单：</label>
                                     <div class="col-sm-8">
-                                        <input id="parentId" name="parentId"
-                                               class="form-control" type="text">
+                                        <input id="" name="" class="form-control" type="text"
+                                               th:value="${pName}" readonly>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label">类型：</label>
+                                    <div class="col-sm-8">
+                                        <label class="radio-inline">
+                                            <input type="radio"
+                                                   name="type" value="0"/>
+                                            目录
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio"
+                                                   name="type" value="1"/>
+                                            菜单
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio"
+                                                   name="type" value="2"/>
+                                            按钮
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -38,20 +60,6 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">类型：</label>
-                                    <div class="col-sm-8">
-                                        <input id="type" name="type"
-                                               class="form-control" type="text">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">图标：</label>
-                                    <div class="col-sm-8">
-                                        <input id="icon" name="icon"
-                                               class="form-control" type="text">
-                                    </div>
-                                </div>
-                                <div class="form-group">
                                     <label class="col-sm-3 control-label">排序：</label>
                                     <div class="col-sm-8">
                                         <input id="orderNum" name="orderNum"
@@ -59,18 +67,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">创建时间：</label>
-                                    <div class="col-sm-8">
-                                        <input id="gmtCreate" name="gmtCreate"
-                                               class="form-control" type="text">
+                                    <label class="col-sm-3 control-label">图标：</label>
+                                    <div class="col-sm-6">
+                                        <input id="icon" name="icon" class="form-control" type="text"
+                                               placeholder="例如：fa fa-circle-o">
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">修改时间：</label>
-                                    <div class="col-sm-8">
-                                        <input id="gmtModified" name="gmtModified"
-                                               class="form-control" type="text">
-                                    </div>
+                                    <input id="ico-btn" class="btn btn-warning" type="button" value="选择图标">
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-8 col-sm-offset-3">
