--- a/src/main/resources/templates/system/menu/menu.html
+++ b/src/main/resources/templates/system/menu/menu.html
@@ -9,7 +9,7 @@
                     <div class="ibox-body">
                         <div class="fixed-table-toolbar">
                             <div class="columns pull-left">
-                                <button type="button" class="btn  btn-primary" onclick="add()">
+                                <button type="button" class="btn  btn-primary" onclick="add('0')">
                                     <i class="fa fa-plus" aria-hidden="true"></i>添加
                                 </button>
                                 <button type="button" class="btn  btn-danger"
