--- a/src/main/resources/templates/system/user/user.html
+++ b/src/main/resources/templates/system/user/user.html
@@ -9,7 +9,8 @@
             <div class="ibox-body">
                 <div class="fixed-table-toolbar">
                     <div class="columns pull-left">
-                        <button shiro:hasPermission="system:user:add" type="button" class="btn  btn-primary" onclick="add()">
+                        <button shiro:hasPermission="system:user:add" type="button" class="btn  btn-primary"
+                                onclick="add()">
                             <i class="fa fa-plus" aria-hidden="true"></i>添加
                         </button>
                         <button type="button" class="btn  btn-danger"
